# is1ab-CTF-template

./: .gitignore  .pre-commit-config.yaml  CHALLENGE_TYPES_REFERENCE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_SUMMARY.md  IS1AB CTF 模板完整建立教學.md  LICENSE  Makefile  PROJECT_REORGANIZATION.md  QUICKSTART.md  README.md  README_NEW.md  REVIEW_SUMMARY.md  config.yml  pyproject.toml  repo流程.md  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.md  dependabot.yml
challenge-template/: .gitignore.template  README.md.template  private.yml.template  public.yml.template
challenge-templates/: private-web.yml.template
docs/: FUTURE_IMPROVEMENTS_ROADMAP.md  IMPROVEMENT_IMPLEMENTATION_GUIDE.md  README.md  USER-FLOW.md  authoring-challenges.md  auto-release-testing.md  branch-protection-setup.md  challenge-creation-guide.md  challenge-development.md  challenge-metadata-standard.md  challenge-types-guide.md  contribution-guide.md  ctf-challenge-workflow.md  deployment-guide.md  faq.md  getting-started-checklist.md  getting-started.md  git-flow-standard.md  setup-guide.md  (+15 more)
web-interface/: README.md  USAGE.md  api.js  app.py  create-challenge.html  index.html  progress.html  pyproject.toml  server.py  styles.css
web-interface/static/css/: bundle.css  custom.css  style.css
web-interface/static/js/: bundle.js  main.js
web-interface/templates/: 404.html  500.html  base.html  challenge_detail.html  challenges.html  create_challenge.html  dashboard.html  edit_challenge.html  settings.html  setup.html  validation.html
web-interface/templates/components/: ChallengesList.jinja  CreateChallenge.jinja  Dashboard.jinja  Error.jinja  Layout.jinja  Settings.jinja
web-interface/templates/setup/: _layout.html  event.html  finalize.html  project.html  quota.html  team.html
(+111 files in other folders)
