[project]
name = "is1ab-ctf-template"
version = "1.0.0"
description = "IS1AB CTF Challenge Development Template"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "flask-assets>=2.1.0",
    "cssmin>=0.2.0",
    "jsmin>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
