[project]
name = "is1ab-ctf-web-interface"
version = "1.0.0"
description = "IS1AB CTF Template Web Interface"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-assets>=2.1.0",
    "pyyaml>=6.0",
    "cssmin>=0.2.0",
    "jsmin>=3.0.0",
    "markupsafe>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["static", "templates", "challenges"]
